# app/docs/openapi.yaml
@@ -140,6 +140,63 @@ paths:
       summary: Get Default Config
       tags:
       - Admin Config Resource
+  /admin/config/raw/global:
+    put:
+      parameters:
+      - name: ZM_ADMIN_AUTH_TOKEN
+        in: cookie
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SetConfigRequest"
+        required: true
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+      summary: Set Global Config
+      tags:
+      - Admin Config Resource
+    get:
+      parameters:
+      - name: ZM_ADMIN_AUTH_TOKEN
+        in: cookie
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: string
+      summary: Get Global Config
+      tags:
+      - Admin Config Resource
+  /admin/config/raw/global/{key}:
+    delete:
+      parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: ZM_ADMIN_AUTH_TOKEN
+        in: cookie
+        schema:
+          type: string
+      responses:
+        "204":
+          description: No Content
+      summary: Delete Global Config
+      tags:
+      - Admin Config Resource
   /admin/config/raw/{scope}/{scopeId}:
     put:
       parameters:
